--- a/success.html
+++ b/success.html
@@ -12,7 +12,7 @@
 <body >
     <div  class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Yay Welcome aboard!</h1>
+          <h1 class="display-4">YESSS Welcome aboard!</h1>
           <p class="lead">We have sent you a welcome email to get you started!</p>
         </div>
       </div>
